src/test/deca/context/invalid/provided/class8.java

class A {
    float x;

    boolean setX(int x){
        this.x=x;
        return true;
    }
}
{
    A a = new A();
    float b=a.setX(5);
}